[frontend] Fix overflow style

--- a/Iceshrimp.Frontend/Components/AttachmentView.razor.css
+++ b/Iceshrimp.Frontend/Components/AttachmentView.razor.css
@@ -28,7 +28,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    overflow: scroll;
+    overflow: auto;
     flex-wrap: nowrap;
 }
 
